<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/servico1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/servico1"
        android:background="#70FF0000"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/servico2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/servico2"
        android:background="#70FF0000"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/servico3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/servico3"
        android:background="#70FF0000"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/servico4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/servico4"
        android:background="#70FF0000"
        android:layout_marginBottom="10dp"

        />

    <Button
        android:id="@+id/servico5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/servico5"
        android:background="#70FF0000"
        android:layout_marginBottom="10dp"
        app:cornerRadius

        />



</LinearLayout>