<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/horizonte"
        app:tint="@color/white"
        android:outlineAmbientShadowColor="@color/black"
        />

    <Button
        android:id="@+id/servicos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/servicos"
        android:backgroundTint="@color/black"

        />

    <Button
        android:id="@+id/endereco"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:backgroundTint="@color/black"
        />
    <Button
        android:id="@+id/redesocial"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/redesocial"
        android:backgroundTint="@color/black"
        />

</LinearLayout>